feat: componente ts

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <script src="build/js/index.js" defer></script>
 </head>
 <body>
-    
+    <card-liga 
+        card-img="/assets/img/capa.jpeg"
+        card-tag="on"
+        card-liga="Spanish LALIGA"
+        card-title="Barcelona x OsasunA"
+    ></card-liga>
+    <card-liga 
+        card-img="/assets/img/jogo-capa.jpeg"
+        card-tag="23:00 | Hoje"
+        card-liga="NCAA Basquete Masculino"
+        card-title="#3 North Carolina x Georgisa Tech"
+    ></card-liga>
 </body>
 </html>
